# apate

./: Cargo.toml  Dockerfile  LICENSE  README.md  rust-toolchain.toml  test-specs.toml
.cargo/: audit.toml  config.toml
.github/: issue_template.md  pull_request_template.md
.github/workflows/: ci.yaml  docker.yaml
assets/: index.html  simplescrollbars.css  toml.js
examples/: apate-specs-app.toml  apate-specs-bin.toml  apate-specs-lua.toml  apate-specs-rhai.toml  apate-specs.toml  apate-template-specs.toml  processors.rs  tests.rs
src/: config.rs  config.toml  deceit.rs  handlers.rs  jinja.rs  lib.rs  lua.rs  main.rs  matchers.rs  output.rs  processors.rs  rhai.rs  test.rs
src/handlers/: admin.rs  mod.rs
tests/: processors.rs  scripting.rs  test-api.rs
