[package]
name = "apate"
version = "0.0.3"
edition = "2024"
homepage = "https://github.com/rustrum/apate"
repository = "https://github.com/rustrum/apate.git"
description = "Any API mocking service for different types of tests"
license-file = "LICENSE"

[[bin]]
name = "apate"
required-features = ["server"]

[features]
server = ["getopt3"]

[dependencies]
actix-router = "0.5"
actix-web = { version = "4.11", features = ["rustls"] }
anyhow = "1"
async-lock = "3.4"
env_logger = "0.11"
futures = { version = "0.3", features = ["thread-pool"] }
hex = "0.4"
jsonpath-rust = "1.0"
log = "0.4"
minijinja = { version = "2.12.0", features = ["loader"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
toml = "0.9"

getopt3 = { version = "2.5.0", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] } #todo should remove it or switch from actix web
