[package]
name = "apate"
version = "0.0.4"
edition = "2024"
homepage = "https://github.com/rustrum/apate"
repository = "https://github.com/rustrum/apate.git"
license-file = "LICENSE"
description = "API mocking server & rust unit tests library to mimic external 3rd party API endpoints"
keywords = ["api", "server", "mocking", "integration", "testing"]

[[bin]]
name = "apate"
required-features = ["server"]

[features]
server = ["getopt3"]

[dependencies]
actix-router = "0.5"
actix-web = { version = "4.11", features = ["rustls"] }
anyhow = "1"
async-lock = "3.4"
env_logger = "0.11"
futures = { version = "0.3", features = ["thread-pool"] }
hex = "0.4"
jsonpath-rust = "1.0"
log = "0.4"
minijinja = { version = "2.12.0", features = ["loader"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["full"] }
toml = "0.9"

getopt3 = { version = "2.5.0", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serial_test = "3.2"
