[package]
name = "apate"
version = "0.0.10"
edition = "2024"
homepage = "https://github.com/rustrum/apate"
repository = "https://github.com/rustrum/apate.git"
license-file = "LICENSE-TERMS"
description = "API mocking server & rust unit tests library to mimic external 3rd party API endpoints"
keywords = ["api", "rest", "mocking", "mockserver", "testing"]

[[bin]]
name = "apate"
required-features = ["server"]

[features]
# having getopt in lib by default would not harm much
# but it will be possible to disable default features if required
default = ["server"]
server = ["getopt3", "include_dir"]

[dependencies]
actix-router = "0.5"
actix-web = { version = "4.11", features = ["rustls"] }
async-lock = { version = "3.4", features = ["std"] }
base64 = "0.22"
cityhasher = "0.1"
color-eyre = "0.6"
env_logger = "0.11"
futures = { version = "0.3", features = ["thread-pool"] }
hex = "0.4"
jsonpath-rust = "1.0"
log = "0.4"
minijinja = { version = "2.12.0", features = ["loader", "json"] }
rand = "0.9"
rhai = { version = "1.23", features = [
    "sync",
    "no_custom_syntax",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
uuid = { version = "1.18", features = ["v4"] }

# server dependencies
getopt3 = { version = "2.5.0", optional = true }
include_dir = { version = "0.7", optional = true }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serial_test = "3"
